--- a/charts/aws-multi-eni-controller/values.yaml
+++ b/charts/aws-multi-eni-controller/values.yaml
@@ -4,8 +4,8 @@
 
 # Image configuration
 image:
-  repository: johnlam90/aws-multi-eni-controller
-  tag: v1.3.7
+  repository: ghcr.io/johnlam90/aws-multi-eni-controller
+  tag: v1.3.4
   pullPolicy: Always
 
 # Namespace to deploy the controller
