--- a/charts/aws-multi-eni-controller/Chart.yaml
+++ b/charts/aws-multi-eni-controller/Chart.yaml
@@ -2,8 +2,8 @@ apiVersion: v2
 name: aws-multi-eni-controller
 description: A Helm chart for AWS Multi-ENI Controller
 type: application
-version: "1.3.4"
-appVersion: "v1.3.4"
+version: "1.3.5"
+appVersion: "v1.3.5"
 home: https://github.com/johnlam90/aws-multi-eni-controller
 sources:
   - https://github.com/johnlam90/aws-multi-eni-controller
@@ -20,14 +20,12 @@ keywords:
 annotations:
   artifacthub.io/license: Apache-2.0
   artifacthub.io/changes: |
-    - Update version to v1.3.4
-    - Complete modular architecture refactoring from monolithic design
-    - Implement cloud-native SR-IOV device plugin restart functionality
-    - Replace kubectl dependency with native Kubernetes API calls
-    - Add comprehensive RBAC permissions for pod management
-    - Enhance SR-IOV device plugin restart reliability
-    - Support multiple SR-IOV device plugin naming conventions
-    - Add timeout protection and improved error handling
-    - Add performance testing framework for enterprise-scale deployments
-    - Refactor ENI Manager from 6700+ lines to modular packages
-    - Improve code maintainability and testability
+    - Update version to v1.3.5
+    - Fix ENI Manager incorrectly generating SR-IOV config for regular ENI configurations
+    - Implement proper PCI address mapping for SR-IOV configurations
+    - Prioritize PCI address matching over device index for SR-IOV interfaces
+    - Add comprehensive test coverage for interface-to-NodeENI mapping
+    - Resolve PCI address mismatches in SR-IOV device plugin configuration
+    - Improve separation between regular ENI and SR-IOV functionality
+    - Add detailed logging for interface mapping decisions
+    - Fix issue where regular ENI configs triggered unnecessary SR-IOV operations
